# homi

./: .gitignore  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tests.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: package.yaml  test.yaml
example/helloworld/: README.md  app.py  async_app.py  helloworld.proto  helloworld_pb2.py  helloworld_pb2_grpc.py  test.py
example/helloworld_return_dict/: README.md  app.py  test.py
example/helloworld_using_stub/: README.md  app.py  helloworld_pb2_grpc.py  requirements.txt  test.py
example/performance_test/: README.md  app.py  async_app.py  requirements.txt  test.py
example/tls/: README.md  server.crt  server.key
src/homi/: __init__.py  app.py  cli.py  config.py  exception.py  exceptions.py  proto_meta.py  registries.py  server.py  test_case.py
src/homi/aio/: app.py  server.py
src/homi/extend/: service.py
src/tests/simple_case/: app.py  async_app.py  helloworld_pb2_grpc.py  test_async_simple_case.py  test_simple_case.py
src/tests/test_alts/: test_alts.py
src/tests/test_ssl/: test_ssl.py
src/tests/test_tls/: test_tls.py
src/tests/test_to_dict/: app.py  test_to_dict.py
