[metadata]
name = homi
# Version needs regex in setup.py.
url = https://github.com/spaceone-dev/homi
license = Apache License 2.0
maintainer = MEGAZONE SpaceONE Team
maintainer_email = admin@spaceone.dev
description = micro grpc framework like flask
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    homi = homi.cli:cli
