[metadata]
name = homi
# Version needs regex in setup.py.
url = https://github.com/spaceone-dev/homi
license = Apache License 2.0
maintainer = MEGAZONE SpaceONE Team
maintainer_email = admin@spaceone.dev
description = micro grpc framework like flask
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.8
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
console_scripts =
    homi = homi.cli:cli

[flake8]
ignore = E226,E302,E41
exclude = ./*/.venv,./*/venv,venv,.venv,./node_modules,./*/*_pb2.py,./*/*_pb2_grpc.py,build
max-line-length = 120
per-file-ignores =
    # __init__ module exports names
    src/homi/__init__.py: F401
    ./src/homi/__init__.py: F401

[tool:pytest]
addopts =
    --verbose
testpaths =
    src/tests